# movie-viewer

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  app.py  apply_cross_platform.sh  fix_all_compatibility_issues.sh  fix_waveform_compatibility.sh  git_add_waveform_feature.sh  main.py  pyproject.toml  pyqtgraph_ver_check.py  requirements.txt  setup.py  test_audio_devices.py  test_m4a_support.py  update_app_py.sh  update_to_lightmode.sh  update_waveform_feature.sh
backup_20250709_073752/: requirements.txt
backup_fixes_20250709_080546/: waveform_widget.py
core/: chapter_manager.py  models.py  video_controller.py
movie_viewer/: __init__.py  __main__.py  app.py  main.py  main_org.py
movie_viewer/core/: __init__.py  audio_analyzer.py  audio_device_manager.py  chapter_manager.py
movie_viewer/ui/: __init__.py  video_player.ui  waveform_widget.py  waveform_widget.py.backup_20250709_075626
movie_viewer/utils/: __init__.py  font_manager.py  platform_utils.py  shortcut_manager.py  style_manager.py  theme_detector.py
ui/: custom_ui_loader.py
utils/: dark_mode.py
